<resources>
    <string name="app_name">Nortrans Go conductor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">www.nortrans-go.com</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_principal">Menú Principal</string>
    <string name="menu_actualizar_usuario">Actualizar Usuario</string>
    <string name="menu_lectura_qr">Lectura QR</string>
    <string name="google_maps_key">google_maps_key</string>

    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_encuesta_choferes">EncuestaChoferes</string>
    <string name="lorem_ipsum_short">Permita que la aplicación NortransGo Conductor acceda a la ubicación de este dispositivo,
        para tener un informe e historial del recorrido realizado en el día, incluso cuando la aplicación esta cerrada o no está en uso.
        Esta aplicación recopila datos de ubicación en segundo plano para cumplir con la funcionalidad completa del rastreo,
        en el caso de omitir el permiso de ubicación, las funcionalidades del rastreo en tiempo real no se podran utilizar</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>
