<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/viajesFragment">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.pullmandelnorte.spencechofer.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.pullmandelnorte.spencechofer.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.pullmandelnorte.spencechofer.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.pullmandelnorte.spencechofer.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/viajesFragment"
        android:name="com.pullmandelnorte.spencechofer.ui.viajes.ViajesFragment"
        android:label="@string/menu_principal"
        tools:layout="@layout/fragment_viajes" >
        <action
            android:id="@+id/action_viajesFragment_to_actualizarUsuarioFragment"
            app:destination="@id/actualizarUsuarioFragment" />
        <action
            android:id="@+id/action_viajesFragment_to_lecturaQrFragment"
            app:destination="@id/lecturaQrFragment" />
    </fragment>
    <fragment
        android:id="@+id/actualizarUsuarioFragment"
        android:name="com.pullmandelnorte.spencechofer.ui.viajes.ActualizarUsuarioFragment"
        android:label="fragment_actualizar_usuario"
        tools:layout="@layout/fragment_actualizar_usuario" />
    <fragment
        android:id="@+id/lecturaQrFragment"
        android:name="com.pullmandelnorte.spencechofer.ui.viajes.lecturaQrFragment"
        android:label="fragment_lectura_qr"
        tools:layout="@layout/fragment_lectura_qr" />
</navigation>